force-app/main/default/objects/vlocity_cmt__SyncDeltaObject__c/vlocity_cmt__SyncDeltaObject__c.object-meta.xml
<CustomObject>
    <label>Sync Delta Object</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Sync Delta Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Delta Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>