force-app/main/default/objects/vlocity_cmt__SyncDeltaObject__c/fields/vlocity_cmt__Action__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>