force-app/main/default/objects/vlocity_cmt__SyncDeltaObject__c/fields/vlocity_cmt__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ObjectId__c</fullName>
    <label>Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>